# SecretEscapes

hotel-cancellation-api/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
hotel-cancellation-api/app/: main.py  predictor.py  schemas.py
hotel-cancellation-api/models/: metadata.json
hotel-cancellation-api/src/: features.py  train.py
hotel-cancellation-api/tests/: conftest.py  test_api.py  test_predictor.py
